hphp/hack/test/typecheck/expression_trees/instance_method_private2.php.exp
File "instance_method_private2.php", line 10, characters 7-16:
Expression trees do not support calling instance methods (Parsing[1002])
File "instance_method_private2.php", line 10, characters 7-8:
Variable `$x` is undefined, or not always defined. (Naming[2050])
  File "", line 0, characters 0-0:
  Did you mean `$this` instead?
File "instance_method_private2.php", line 10, characters 15-15:
Invalid argument (Typing[4110])
  File "instance_method_private2.php", line 6, characters 24-33:
  Expected `ExampleInt`
  File "instance_method_private2.php", line 10, characters 15-15:
  But got `int`
File "instance_method_private2.php", line 10, characters 11-13:
Cannot access non-public members within expression trees. (Typing[4448])
  File "instance_method_private2.php", line 6, characters 20-22:
  Member defined here
